--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "rustylogs"
+name = "rule"
 version = "0.1.0"
 edition = "2024"
+authors = ["Michael Hall <michael@rubberduck-labs.com>"]
+license = "MIT"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
